# Rcartogram

./: .Rbuildignore  Changes.xml  DESCRIPTION  GNUmakefile  LICENSE  NAMESPACE  README  README.WindowsInstall  configure  configure.in  configure.win
R/: cart.R
Web/: GNUmakefile  index.html.in
data/: uspop.rda
demo/: 00Index  SpPolyCart.R  synthetic.R
man/: addBoundary.Rd  cartogram.Rd  uspop.Rd
src/: Makevars.win  Rcart.c  cart.c  pop.rda
src/Old/: cart2.c  cart2v.c
tests/: cart.R  check.R  sea.R  usa.R  usapop.R
vignettes/: README.WindowsInstall.Tutorial.Rmd  README.WindowsInstall.Tutorial.html
